crates/sdk-tests/tests/storage/invalid_field.stderr
error: custom attribute panicked
 --> $DIR/invalid_field.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Invalid `#[storage]` field type: String")
